image rendering and search display improved

--- a/templates/home.html
+++ b/templates/home.html
@@ -86,6 +86,13 @@
     <!-- local JS -->
     <script src="{{ url_for('static', filename='js/jquery.custom-animations.js') }}"></script>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/image-render.js') }}"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            var imgs = document.getElementsByClassName('recipe-img');
+            handle(imgs);
+        });
+    </script>
 </body>
 
 </html>
