--- a/templates/preview.html
+++ b/templates/preview.html
@@ -2,9 +2,16 @@
 {% block fullcontent %}
 
 <div class="row">
-    <div class="col s12 m7 l5" id="recipe-preview">
+    <div class="col s12 m5 l4" id="recipe-preview">
         {% include "recipe_card.html" %}      
     </div>
 </div>
 
+<script src="{{ url_for('static', filename='js/image-render.js') }}"></script>
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        var imgs = document.getElementsByClassName('recipe-img');
+        handle(imgs);
+    });
+</script>
 {% endblock %}
