improve layout on profile page with better responsiveness

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -281,6 +281,10 @@ a.disabled {
     margin-bottom: 25px;
 }
 
+.collapsible-body {
+    padding: 10px;
+}
+
 /* tooltip*/
 .tooltip {
   position: relative;
