--- a/static/css/style.css
+++ b/static/css/style.css
@@ -127,11 +127,13 @@ main {
 /* recipe card */
 .card {
     padding: 25px;
-    margin:0;
+    margin: 0;
+    min-height: 35vh;
 }
 
 .card .card-content {
     border-radius: 2px;
+    min-height: 30vh;
 }
 
 .card-tab-content {
