--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
     <!-- local CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/background-patterns.css') }}" type="text/css" />
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
     <title>Little Munchkins</title>
 </head>
 
