--- a/templates/recipe_builder.html
+++ b/templates/recipe_builder.html
@@ -48,7 +48,12 @@
                         </div>
                         <div class="col s12">
                             <div class="file-path-wrapper">
-                                <input class="file-path validate" type="text" name="recipe_img_name">
+                                <input disabled class="file-path validate" type="url" name="recipe_img_name" style="display:block">
+                            </div>
+                        </div>
+                        <div class="col s12">
+                            <div class="file-path-wrapper">
+                                <input type="url" name="recipe_img_url" style="display:block">
                             </div>
                         </div>
                     </div>
@@ -123,7 +128,6 @@
         </div>
     </form>
 </div>
-
 <!-- local scripts-->
 <script>
     var loadPreviewFile = function(event){ 
@@ -133,9 +137,54 @@
             alert('file is too large, limit is 1MB, please select another');
             return;
         }
-        $('#builder-preview-img').attr("src", URL.createObjectURL(event.target.files[0])).css("display", "block");
+        getSignedRequest(event.target.files[0]);
         $('.clear-preview').show();
     };
+
+    function getSignedRequest(file){
+        console.log(file.name)
+        var xhr = new XMLHttpRequest();
+        xhr.open("GET", "/sign_s3?file_name="+file.name+"&file_type="+file.type);
+        xhr.onreadystatechange = function(){
+            if(xhr.readyState === 4){
+                if(xhr.status === 200){
+                    var response = JSON.parse(xhr.responseText);
+                    uploadFile(file, response.data, response.url);
+                }
+                else{
+                    alert("Could not get signed URL.");
+                }
+            }
+        };
+        xhr.send();
+    }
+
+    function uploadFile(file, s3Data, url){
+        var xhr = new XMLHttpRequest();
+        xhr.open("POST", s3Data.url);
+
+        var postData = new FormData();
+        for(key in s3Data.fields){
+            postData.append(key, s3Data.fields[key]);
+        }
+        postData.append('file', file);
+
+        xhr.onreadystatechange = function() {
+            if(xhr.readyState === 4){
+                if(xhr.status === 200 || xhr.status === 204){
+                    document.getElementById("builder-preview-img").setAttribute("src", url);
+                    //document.querySelector('input[name="recipe_img"]').setAttribute("value", url);
+                    document.querySelector('input[name="recipe_img_url"]').setAttribute("value", url);
+                    $('#builder-preview-img').attr("src", url).css("display", "block");
+                    console.log(url)
+                }
+                else{
+                    alert("Could not upload file.");
+                }
+            }
+        };
+        xhr.send(postData);
+    }
 
     function clearOnReset(){
         if(confirm('Are you sure you want to cancel changes?')){
