update image sizing on recipe card header

--- a/templates/recipe_card.html
+++ b/templates/recipe_card.html
@@ -19,7 +19,7 @@
                 </form>
             {% endif %}
         </div>
-        <div class="col s5 recipe-img-header" >
+        <div class="col s10 m7 l4 recipe-img-header" >
             {% if recipecard.recipe_img %}
             <img class="recipe-img-header-preview" alt="{{ recipecard.recipe_img }}" width="100%">
         {% endif %}
