tidy up image upload operations

--- a/templates/home.html
+++ b/templates/home.html
@@ -87,6 +87,7 @@
     <script src="{{ url_for('static', filename='js/jquery.custom-animations.js') }}"></script>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
     <script src="{{ url_for('static', filename='js/image-render.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/upload-s3.js') }}"></script>
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             var imgs = document.getElementsByClassName('recipe-img');
