--- a/templates/recipe_editor.html
+++ b/templates/recipe_editor.html
@@ -60,7 +60,12 @@
                         </div>
                         <div class="col s12">
                             <div class="file-path-wrapper">
-                                <input class="file-path validate" id="file-path" type="text" value="${{ recipecard['recipe_img'] }}" name="recipe_img_name">
+                                <input class="file-path validate" id="file-path" type="text" value="${{ recipecard['recipe_img'] }}" name="recipe_img_name" style="display:none;">
+                            </div>
+                        </div>
+                        <div class="col s12">
+                            <div class="file-path-wrapper">
+                                <input type="url" name="recipe_img_url" value="{{ recipecard['recipe_img'] }}" style="display:none">
                             </div>
                         </div>
                     </div>
@@ -185,6 +190,7 @@
 </div>
 
 <!-- local scripts-->
+<script src="{{ url_for('static', filename='js/upload-s3.js') }}"></script>
 <script>
     var MutationObserver = window.MutationObserver;
     var slide = document.getElementById('file-path');
@@ -194,7 +200,7 @@
             if (mutation.type == "attributes") {
                 var value =  document.getElementById("file-path").getAttribute("value");
                 if(value != ""){
-                    document.getElementById("builder-preview-img").setAttribute("src", "/uploads/" + value);
+                    document.getElementById("builder-preview-img").setAttribute("src", value);
                     document.getElementById('clear-preview').style.display = "block";
                 }
             }
@@ -216,16 +222,18 @@
         if(event.target.files[0].size > (1024 * 1024)){
             $('input[name="recipe_img"]').val('')
             $('input[name="recipe_img_name"]').val('');
+            $('input[name="recipe_img_url"]').val('');
             alert('file is too large, limit is 1MB, please select another');
             return;
         }
-        $('#builder-preview-img').attr("src", URL.createObjectURL(event.target.files[0]));
+        getSignedRequest(event.target.files[0]);
         $('.clear-preview').show();
     };
 
     function clearImage(){
         $('input[name="recipe_img"]').val('')
         $('input[name="recipe_img_name"]').val('');
+        $('input[name="recipe_img_url"]').val('');
         $('#builder-preview-img').attr("src", "").css("display", "none");
         $('.clear-preview').hide();
     };
