improved protection of endpoints and display of error

--- a/templates/400_generic.html
+++ b/templates/400_generic.html
@@ -1,5 +1,7 @@
 {% extends "base_overlay.html" %}
 {% block content %}
-    <p><strong>A {{code}} http error occurred!</strong></p>
+<div class="container center-align">   
+    <p style="font-size: 24px"><strong>A {{code}} http error occurred!</strong></p>
     <p>{{e}}</p>
+</div> 
 {% endblock %}
