--- a/templates/500_generic.html
+++ b/templates/500_generic.html
@@ -1,5 +1,7 @@
 {% extends "base_overlay.html" %}
 {% block content %}
-    <p><strong>An error occurred!</strong></p>
+<div class="container center-align"> 
+    <p style="font-size: 24px"><strong>An error occurred!</strong></p>
     <p>{{e}}</p>
+</div>
 {% endblock %}
