--- a/templates/login.html
+++ b/templates/login.html
@@ -28,6 +28,11 @@
                         <button class="btn waves-effect waves-light" type="submit" id="submit-login">Submit</button>
                     </div>
                 </div>
+                <div class="row">
+                    <div class=" col s12 center">
+                        <p><a href="../register" class="black-text">Not Registered yet?</a></p>
+                    </div>
+                </div>
             </div>
         </form>
     </div>
