--- a/templates/register.html
+++ b/templates/register.html
@@ -72,6 +72,11 @@
                         <button class="btn waves-effect waves-light" type="submit" id="submit-register">Submit</button>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col s12 center">
+                        <p><a href="../login" class="black-text">Already Registered?</a></p>
+                    </div>
+                </div>
             </div>
         </form>
     </div>
