improve recipe card uniformity

--- a/templates/recipe_card.html
+++ b/templates/recipe_card.html
@@ -58,14 +58,14 @@
         {% endif %}
     </div>
     <!-- tabs -->
-    <div class="card-tabs" style="display: none;">
+    <div class="row card-tabs" style="display: none;">
         <ul class="tabs tabs-fixed-width">
             <li class="tab"><a class="desc-tab tab-link grey darken-3 light-green-text active"><i class="material-icons">border_color</i></a></li>
             <li class="tab"><a class="ingredients-tab tab-link light-green-text text-lighten-1"><i class="material-icons">format_list_bulleted</i></a></li>
             <li class="tab"><a class="method-tab tab-link light-green-text text-lighten-2"><i class="material-icons">av_timer</i></a></li>
         </ul>
     </div>
-    <div class="card-tab-content lime lighten-5" style="display: none;">
+    <div class="row card-tab-content lime lighten-5" style="display: none;">
         <!-- descriptive content -->
         <div class="desc-content" style="display: none;">
             <h6><i>{{ recipecard.desc }}</i></h6>
