improve search empty message

--- a/templates/search.html
+++ b/templates/search.html
@@ -23,7 +23,7 @@
                         {% endfor %}
                 </div>
                 {% else %}
-                <p>no results found</p>
+                <p>No results found yet, click Submit to see all recipes</p>
                 {% endif %}
                 {% if results_two|length %}
                 <div class="col s12 m6 l4">
